--- a/Personal/Home/templates/connect.html
+++ b/Personal/Home/templates/connect.html
@@ -36,7 +36,7 @@
 
             <span id="connect_by_phone_span"><p id="connect_by_phone_p" class="connect_centered_li">By Phone   <i id="connect_by_phone_i" class="fas fa-mobile-alt"></i></p></span>
             <p>
-            Like most people, my cell phone has become a sort of extension to my persons. I usally have it with me at all times. My daytime cell number is <a href="tel://14192068550" class="hvr-sweep-to-bottom" target="_top">(419)-206-8550</a>. 
+            Like most people, my cell phone has become a sort of extension to my persons. I usally have it with me at all times. My daytime cell number is <a href="tel://14192068550" class="" target="_top">(419)-206-8550</a>. 
             The only issue with this is that, like most people, I sometimes hesitate answering a number I don't know. (I worked for a call center at one point, I know the tricks of the trade) 
             I have a voicemail service that I use, so if I ever don't pick up, please leave me a voicemail with your information!
             </p>
@@ -44,7 +44,7 @@
             <span id="connect_by_mail_span"><p id="connect_by_mail_p" class="connect_centered_li">By Email   <i id="connect_by_email_i" class="far fa-envelope-open"></i></p></span>
             <p>
             
-            In some cases, I am more apt to responding to an email than a cell phone call. My primary personal email is <a href="mailto:JLamborghini22@gmail.com?Subject=Hey%20Jarret%2C%20this%20is%20(tell%20me%20your%20name%20here)...&body=Just%20want%20to%20say%20that%20you%20rock!%20(Just%20kidding%20put%20your%20own%20message%20here.)" class="hvr-sweep-to-right">Jlamborghini22@gmail.com</a>. 
+            In some cases, I am more apt to responding to an email than a cell phone call. My primary personal email is <a href="mailto:JLamborghini22@gmail.com?Subject=Hey%20Jarret%2C%20this%20is%20(tell%20me%20your%20name%20here)...&body=Just%20want%20to%20say%20that%20you%20rock!%20(Just%20kidding%20put%20your%20own%20message%20here.)" class="functional_link">Jlamborghini22@gmail.com</a>. 
             I am extremely responsive when it comes to emails, so this is an equally ideal method of communication.
 
             <br>
