background image added

--- a/Personal/Home/templates/base.html
+++ b/Personal/Home/templates/base.html
@@ -46,6 +46,10 @@
     <div id="home_me_living_life_div" class="{% if me_living_life == False %} living_life_false {% else %} living_life_true {% endif %}">
       <img id="home_me_living_life_img" class="{% if me_living_life == False %} living_life_false {% else %} living_life_true {% endif %}" src="{% static 'png/me_living_life_edited.png' %}" alt="Jarret in motion...">
     </div>
+
+    <div id="vector_mountain_div">
+      <img id="vector_mountain_img" src="{% static 'png/vector_mountains.png' %}" alt="Vectored Mountains">
+    </div>
   
     {% block home %}{% endblock %} 
     {% block resume %}{% endblock %}
