--- a/Personal/staticfiles/css/main.css
+++ b/Personal/staticfiles/css/main.css
@@ -31,6 +31,11 @@ body {
     height: auto;
   }
 
+  div#left_window_border, 
+  div#right_window_border {
+    height: 80%;
+  }
+
   div#left_window_border_box_shadow,
   div#right_window_border_box_shadow {
     top: 140px;
@@ -41,12 +46,17 @@ body {
     top: 140px;
   }
 
+  div#vector_mountain_div {
+    height: 425px;
+    bottom: -195px;
+  }
+
   /* Home Page */
 
   div#home_me_living_life_div {
-    width: 300px;
+    width: 150px;
     height: auto;
-    top: 52.5%;
+    top: 47.5%;
   }
 
   /* About Me Page */
@@ -137,6 +147,11 @@ body {
     height: auto;
   }
 
+  div#left_window_border, 
+  div#right_window_border {
+    height: 83.5%;
+  }
+
   div#left_window_border_box_shadow,
   div#right_window_border_box_shadow {
     top: 140px;
@@ -147,12 +162,17 @@ body {
     top: 140px;
   }
 
+  div#vector_mountain_div {
+    height: 425px;
+    bottom: -160px;
+  }
+
   /* Home Page */
 
   div#home_me_living_life_div {
-    width: 350px;
+    width: 150px;
     height: auto;
-    top: 55%;
+    top: 45%;
   }
 
   /* About Me Page */
@@ -256,6 +276,11 @@ body {
     height: auto;
   }
 
+  div#left_window_border, 
+  div#right_window_border {
+    height: 80%;
+  }
+
   div#left_window_border_box_shadow,
   div#right_window_border_box_shadow {
     top: 140px;
@@ -266,12 +291,17 @@ body {
     top: 140px;
   }
 
+  div#vector_mountain_div {
+    height: 425px;
+    bottom: -100px;
+  }
+
   /* Home Page */
 
   div#home_me_living_life_div {
-    width: 350px;
+    width: 150px;
     height: auto;
-    top: 57.5%;
+    top: 45%;
   }
 
   /* About Me Page */
@@ -384,6 +414,11 @@ body {
     height: auto;
   }
 
+  div#left_window_border, 
+  div#right_window_border {
+    height: 70%;
+  }
+
   div#left_window_border_box_shadow,
   div#right_window_border_box_shadow {
     top: 44px;
@@ -394,13 +429,18 @@ body {
     top: 44px;
   }
 
+  div#vector_mountain_div {
+    height: 425px;
+    bottom: 75px;
+  }
+
   /* Home Page */
 
   div#home_me_living_life_div {
-    width: 425px;
+    width: 225px;
     height: auto;
-    top: 52.5%;
-  }
+    top: 32.5%;
+  } 
 
   /* About Me Page */
 
@@ -506,6 +546,11 @@ body {
     height: auto;
   }
 
+  div#left_window_border, 
+  div#right_window_border {
+    height: 80%;
+  }
+
   div#left_window_border_box_shadow,
   div#right_window_border_box_shadow {
     top: 44px;
@@ -516,13 +561,18 @@ body {
     top: 44px;
   }
 
+  div#vector_mountain_div {
+    height: 400px;
+    bottom: 225px;
+  }
+
   /* Home Page */
 
   div#home_me_living_life_div {
-    width: 475px;
+    width: 200px;
     height: auto;
-    top: 55%;
-  }
+    top: 30%;
+  } 
 
   /* About Me Page */
 
@@ -629,6 +679,11 @@ body {
     height: auto;
   }
 
+  div#left_window_border, 
+  div#right_window_border {
+    height: 60%;
+  }
+
   div#left_window_border_box_shadow,
   div#right_window_border_box_shadow {
     top: 44px;
@@ -639,12 +694,17 @@ body {
     top: 44px;
   }
 
+  div#vector_mountain_div {
+    height: 400px;
+    bottom: 300px;
+  }
+
   /* Home Page */
 
   div#home_me_living_life_div {
-    width: 500px;
+    width: 200px;
     height: auto;
-    top: 55%;
+    top: 30%;
   }
 
   /* About Me Page */
@@ -758,6 +818,11 @@ body {
     height: auto;
   }
 
+  div#left_window_border, 
+  div#right_window_border {
+    height: 75%;
+  }
+
   div#left_window_border_box_shadow,
   div#right_window_border_box_shadow {
     top: 44px;
@@ -768,12 +833,17 @@ body {
     top: 44px;
   }
 
+  div#vector_mountain_div {
+    height: 450px;
+    bottom: 300px;
+  }
+
   /* Home Page */
 
   div#home_me_living_life_div {
-    width: 510px;
+    width: 225px;
     height: auto;
-    top: 55%;
+    top: 30%;
   }
 
   /* About Me Page */
@@ -915,7 +985,7 @@ body {
 
 .about_me_hr_h5 {
   width: 50%;
-  background-color: #6e73ab;
+  background-color: #C5E1CB;
   height: 1px;
   margin-top: 10px;
   margin-bottom: 10px;
@@ -924,7 +994,7 @@ body {
 }
 
 .about_me_blue_text_highlight {
-  color: #6e73ab;
+  color: #4C8872;
   /* background-color: #fff; */
   background: linear-gradient(0.25turn, #FFF8BE 15%, #fff, #FFF8BE 85%);
   text-align: center;
@@ -965,7 +1035,7 @@ div#main_header_outer {
 div#main_header_inner {
   display: flex;
   width: 100%;
-  background-color: #6e73ab;
+  background-color: #78A091;
   padding: 10px;
 }
 
@@ -975,7 +1045,7 @@ div#main_header_left_half {
 
 div#main_header_left_half p {
   margin: 0 auto;
-  color: #cfc259;
+  color: #FFF8BE;
 }
 
 div#main_header_right_half {
@@ -996,7 +1066,7 @@ div#main_header_right_half a:hover {
 
 .active_header_link p {
   font-weight: bold;
-  color: #FFF8BE;
+  color: #FFF;
 }
 
 .active_header_link p::before {
@@ -1012,7 +1082,21 @@ div#main_header_right_half a:hover {
 }
 
 .inactive_header_link p {
-  color: #cfc259;
+  color: #FFF8BE;
+}
+
+
+div#vector_mountain_div {
+  position: fixed;
+  left: 0;
+  width: 100%;
+  z-index: -1;
+}
+
+img#vector_mountain_img {
+  width: 100%;
+  height: auto;
+  opacity: .7;
 }
 
 /* Home Page */
@@ -1031,7 +1115,8 @@ img#home_me_living_life_img {
   /* top: 50%;
   left: 50%;
   transform: translateX(-50%); */
-  opacity: .0625;
+  opacity: .25;
+  filter: drop-shadow(-15px 15px 30px #78A091)
 
 }
 
@@ -1777,9 +1862,8 @@ div#left_window_border {
   left: 0px;
   top: 0px;
   width: 10px;
-  height: 100%;
   position: fixed;
-  background-color: #6e73ab;
+  background-color: #78A091;
   z-index: 2;
 }
 
@@ -1787,9 +1871,8 @@ div#right_window_border {
   right: 0px;
   top: 0px;
   width: 10px;
-  height: 100%;
   position: fixed;
-  background-color: #6e73ab;
+  background-color: #78A091;
   box-shadow: 10px 10px #000;
   z-index: 2;
 }
@@ -1817,7 +1900,7 @@ div#left_curved_cover {
   left: 10px;
   width: 50px;
   height: 25px;
-  background-color: #6e73ab;
+  background-color: #78A091;
   z-index: -1;
 }
 
@@ -1837,7 +1920,7 @@ div#right_curved_cover {
   right: 10px;
   width: 50px;
   height: 25px;
-  background-color: #6e73ab;
+  background-color: #78A091;
   z-index: -1;
 }
 
