--- a/Personal/staticfiles/css/main.css
+++ b/Personal/staticfiles/css/main.css
@@ -170,7 +170,7 @@ body {
   /* Home Page */
 
   div#home_me_living_life_div {
-    width: 150px;
+    width: 25%;
     height: auto;
     top: 45%;
   }
@@ -299,7 +299,7 @@ body {
   /* Home Page */
 
   div#home_me_living_life_div {
-    width: 150px;
+    width: 17.5%;
     height: auto;
     top: 45%;
   }
@@ -437,7 +437,7 @@ body {
   /* Home Page */
 
   div#home_me_living_life_div {
-    width: 225px;
+    width: 15%;
     height: auto;
     top: 32.5%;
   } 
@@ -569,7 +569,7 @@ body {
   /* Home Page */
 
   div#home_me_living_life_div {
-    width: 200px;
+    width: 15%;
     height: auto;
     top: 30%;
   } 
