--- a/Personal/Home/templates/display_content.html
+++ b/Personal/Home/templates/display_content.html
@@ -31,3 +31,7 @@
 
 
 {% endblock %}
+
+{% block pdf_parser_script %}
+<script src="{% static 'js/pdf_parser.js' %}" type="text/javascript"></script>
+{% endblock %}
