--- a/Personal/Home/templates/pdf_parser.html
+++ b/Personal/Home/templates/pdf_parser.html
@@ -39,3 +39,7 @@
 </div>
 
 {% endblock %}
+
+{% block pdf_loader_script %}
+<script src="{% static 'js/pdf_loader.js' %}" type="text/javascript"></script>
+{% endblock %}
