--- a/Personal/Home/templates/about_me.html
+++ b/Personal/Home/templates/about_me.html
@@ -19,9 +19,9 @@
 
 
             <li>
-                <hr class="about_me_hr">
+                <hr class="target_hr about_me_hr">
                 <h5 id="bk_test" class="target_header">Background</h5>
-                <hr class="about_me_hr">
+                <hr class="target_hr about_me_hr">
                 <br>
                 <p>From a young age, I vividly recall being captivated by gadgetry. Due to my problem-solving nature and interest in how things work, I have always been the "go-to" guy for technologically-related issues (<i>primarily turning the router on and off again for 
                 family members</i>). I enjoy laying out a problem and taking incremental steps towards a solution. 
@@ -32,11 +32,11 @@
             </li>
 
             <br>
-            <hr class="about_me_hr">
+            <hr class="target_hr about_me_hr">
 
             <li>
                 <h5 class="target_header">Personally Acquired Experience</h5>
-                <hr class="about_me_hr">
+                <hr class="target_hr about_me_hr">
                 <br>
 
                 <center><p><strong>Front-End</strong></center>
@@ -136,9 +136,9 @@
 
             <li>
 
-                <hr class="about_me_hr">
+                <hr class="target_hr about_me_hr">
                 <h5 id="about_me_professional_exp" class="target_header">Professionally Acquired Experience</h5>
-                <hr class="about_me_hr">
+                <hr class="target_hr about_me_hr">
                 <br>
 
                 <p> Since my hire in February of 2015 (<i>{{ elapsed_time }}</i>), I have worked very intimately with our Enterprise Resource Planning systems here at Fiat Chrysler 
@@ -154,11 +154,11 @@
             </li>
 
             <br>
-            <hr class="about_me_hr">
+            <hr class="target_hr about_me_hr">
 
             <li>
                 <h5 class="target_header">Technological Goals</h5>
-                <hr class="about_me_hr">
+                <hr class="target_hr about_me_hr">
                 <br>
 
                 <p>For me, the data-driven intertwinement between man and machine transcends more than mere curiousity. For me, it is a responsibility to adapt and evolve in order to stay current. With data being an ever-more 
@@ -168,11 +168,11 @@
             </li>
 
             <br>
-            <hr class="about_me_hr">
+            <hr class="target_hr about_me_hr">
 
             <li>
                 <h5 class="target_header">Resume</h5>
-                <hr class="about_me_hr">
+                <hr class="target_hr about_me_hr">
                 <br>
 
                 <p>I've attached a copy of my resume below. While it doesn't reflect all of my personal accomplishments as nicely as I'd like, feel free to take a copy with you on your search for the right candidate.</p>
