--- a/Personal/Home/templates/base.html
+++ b/Personal/Home/templates/base.html
@@ -74,5 +74,6 @@
     {% block pdf_parser_script %} {% endblock %}
     {% block pdf_loader_script %} {% endblock %}
     {% block about_me_script %} {% endblock %}
+    {% block connect_script %} {% endblock %}
   </body>
 </html>
